@@ -1,0 +1,101 @@
+[b][size=6][center]Rune Magic[/center][/size][/b]
+
+
+[color=red][b][size=4][center]WARNING[/center]
+This mod is in ALPHA, every feature is fully functional but there will be bugs. I will try to fix problems as they appear.
+Please back up your save file if you use it with other mods!
+[/size][/b][/color]
+
+[color=yellow][b][size=4][center]Big Update[/center]
+This update is hugh, it adds a lot of new features and fixes a lot of bugs. If you are updating from a previous version please remove every item that has spells on it from inventory and chests.
+You can restart the wizard event using the config menu, if you already had it.
+[/size][/b][/color]
+
+[center][size=5][b]Features[/b][/size][/center]
+
+[list][*][b]Spells:[/b] A list of spells the player can use for various purposes. The spells can be learned and inscribed into magic items.
+    Every spell belongs to a school of magic.
+[*][b]Magic Skills:[/b] There are four Magic Skills: Abjuration, Alteration, Conjuration, and Evocation. 
+    Each school has a set of spells that can be learned and inscribed into magic items.
+[*][b]Magic Professions:[/b] There are six professions for each Magic Skill.
+[*][b]Magic Items:[/b][list]
+[*][b]Runes:[/b] Carved stone pieces with glyphs and Magic Dust that have charges. When activated, a spell is cast and a charge is used. 
+    They slowly recharge over time and have a random number of charges based on the level of the spell.
+[*][b]Scrolls:[/b] One-time use items that can be crafted and infused with spells. 
+    They don't have charges but are cheaper than runes.
+[*][b]Staves:[/b] Blunt weapons that grant the ability to cast spells. 
+    They always have 20 charges and regenerate once per day. 
+    They cannot be crafted but can be found in the mines.[/list][/list]
+
+
+[b][size=5]List of Spells[/b][/size]
+
+[color=#b6b6b6][b]Abjuration School:[/b]
+[*][b]Healing:[/b] Heals the caster for a small amount.
+[*][b]Shielding:[/b] Rises the caster's defense.
+[*][b]Cleansing:[/b] Removes hurtful effects from the caster.
+[*][b]Haste:[/b] Makes the caster sprint fast for a short duration.
+[*][b]Strength:[/b] Increases the attack damage of the caster.
+[*][b]Regeneration:[/b] Slowly regenerates stamina for a long period of time.
+[*][b]Vitality:[/b] Increases the maximum stamina and health of the caster.
+[*][b]Banishing:[/b] Destroys the target creature if it's hurt.
+[*][b]Warding:[/b] Makes the caster immune to damage for a short period of time.
+[/color]
+[color=#1e84cc][b]Alteration School:[/b]
+[*][b]Transmutation:[/b] Removes quality from an item and gives the caster some money back.
+[*][b]Charming:[/b] Charms the target NPC, making it more friendly towards the caster for a period of time.
+[*][b]Displacement:[/b] Teleports the caster to a target location.
+[*][b]Invisibility:[/b] Makes the caster invisible for a short period of time.
+[*][b]Translocation:[/b] Switches position with a target living creature.
+[*][b]Teleportation:[/b] Returns the caster home from anywhere.
+[/color]
+[color=#ff7700][b]Conjuration School:[/b]
+[*][b]Hydration:[/b] Conjures a watering can at the target location.
+[*][b]Labor:[/b] Conjures a hoe at the target location.
+[*][b]Breaking:[/b] Conjures a pickaxe at the target location.
+[*][b]Light:[/b] Conjures a torch at the target location.
+[*][b]Summoning:[/b] Summons a creature to fight for the caster.
+[*][b]Stone:[/b] Conjures a big stone on the target location.
+[*][b]Excavation:[/b] Conjures a stair at the current level of the mine.
+[/color]
+[color=#cc4125][b]Evocation School:[/b]
+[*][b]Magic Missile:[/b] Shoots a magic missile for every 2 Magic Skill levels.
+[*][b]Ice Bolt:[/b] Shoots an Ice bolt to the target creature slowing it down.
+[*][b]Blasting:[/b] Creates an explosion at the target location, breaking and damaging everything in it.
+[*][b]Fireball:[/b] The caster throws a ball of fire that explodes and damages every enemy in an area.
+[*][b]Storm:[/b] The caster creates a lightning storm.
+[/color]
+
+[center][size=5][b]How to Use[/b][/size][/center]
+
+To start your journey, befriend the Wizard who will give you a staff and the basic recipes you will need to craft Runes and Scrolls (You need 3 hearts to trigger the event.)
+After you get the Recipes, craft an Inscription Table or a Runic Anvil and start casting spells and level up.
+
+[color=#00ff00][b][size=4]
+Use R to cast and Q to activate Professions (You can bind the keys to whatever you want).
+[/size][/b][/color]
+
+
+[center][size=5][b]Compatibility[/b][/size][/center]
+[list][size=2]
+[*][b]Other Mods: [/b]It should compatible with almost anything, even Magic from spacechace0, it would be redundant and not balanced though.Also I tested this with SVE and like 50 mods and haven't had any problems with it yet, but remember its ALPHA anything could happen.
+[*][b]Multiplayer: [/b]This mod has not been tested in multiplayer. I have no friends.
+[*][b]Mobile: [/b]This mod is made for PC only, and there are no plans to port it to mobile.
+[/size][/list]
+
+[b][size=4]Source:[url=http://] https://github.com/facufierro/RuneMagic[/url][/size][/b]
+
+
+[size=5]Known Issues[/size]
+
+[list][size=2]
+[*]When creating runes using the Shift key to create 5 only the last one stays the others are erased, I don't know how to fix this. If anyone has an idea on how to limit the crafting to 1 rune it would be very welcome.
+[/size][/list]
+
+
+[b][size=4]Credits[/size][/b]
+
+
+[size=3]This mod was possible thanks to [b]spacechase0[/b] as it is inspired in Magic, and uses SpaceCore, JsonAssets and Generic Mod Config Menu.
+And of course to [b]pathoschild[/b], without SMAPI I wouldn't even know where to start.
+[/size]
