@@ -159,7 +159,6 @@ namespace RuneMagic.Source
                     Game1.player.AddCustomSkillExperience(magicSkill.Value, 100);
                 }
                 Game1.player.addItemToInventory(new MagicWeapon(JsonAssetsApi.GetWeaponId("Apprentice Staff")));
-                PlayerStats.MagicLearned = true;
             }
         }
 
@@ -510,7 +509,7 @@ namespace RuneMagic.Source
         public void WizardEvent(GameLocation location)
         {
             //Instance.Monitor.Log(PlayerStats.MagicLearned.ToString());
-            if (location.Name == "WizardHouse" && Game1.player.getFriendshipHeartLevelForNPC("Wizard") >= 3 && PlayerStats.MagicLearned == false)
+            if (location.Name == "WizardHouse" && Game1.player.getFriendshipHeartLevelForNPC("Wizard") >= 3 && Config.MagicLearned == false && Game1.player.GetCustomSkillLevel(PlayerStats.MagicSkills[School.Abjuration]) < 1)
             {
                 var eventString = $"WizardSong/6 18/Wizard 10 15 2 farmer 8 24 0/skippable" +
                        $"/speak Wizard \"@! Come in my friend, come in...\"" +
@@ -527,7 +526,10 @@ namespace RuneMagic.Source
                        $"/speak Wizard \"Now pay attention, young adept. I will teach you the bases you will need to learn Magic!\"" +
                        $"/end";
                 location.startEvent(new Event(eventString, 15065001));
+                Config.MagicLearned = true;
             }
+            else if (Game1.player.GetCustomSkillLevel(PlayerStats.MagicSkills[School.Abjuration]) < 1)
+                Config.MagicLearned = true;
         }
 
         public void PlayerAnimation()
@@ -597,7 +599,11 @@ namespace RuneMagic.Source
                 name: () => "Casting Key",
                 getValue: () => Config.CastKey,
                 setValue: value => Config.CastKey = value);
-
+            ConfigMenuApi.AddBoolOption(
+                mod: ModManifest,
+                name: () => "Magic Learned",
+                getValue: () => Config.MagicLearned,
+                setValue: value => Config.MagicLearned = value);
             ConfigMenuApi.SetTitleScreenOnlyForNextOptions(ModManifest, true);
             ConfigMenuApi.AddBoolOption(
                mod: ModManifest,
